--- a/m_designer/public/index.html
+++ b/m_designer/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Add this line -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
