--- a/m_designer/public/index.html
+++ b/m_designer/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Add this line -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
